// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly 1`] = `
<button
  className="sample-button"
  data-category-link-label=""
  disabled=""
  fullWidth={true}
  type="button"
>
  ABCD
</button>
`;

exports[`Button component renders disabled button correctly 1`] = `
<button
  className="sample-button"
  data-category-link-label=""
  disabled={true}
  fullWidth={true}
  type="button"
>
  ABCD
</button>
`;
